welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value i
		if (nums(i) == lookingFor) j = j+1;
                         ^occurrences:3: error: type mismatch;
 found   : Unit
 required: Int
	for (a<- 0 to nums.length-1) {
              ^