welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
	var j:Int = 0;
	for (a<- 0 to nums.length-1) {
		if (nums(i) == lookingFor) j = j+1;
	}
}
